<resources>
    <string name="all_all">All</string>
    <string name="all_all_floors">All Floors</string>
    <string name="all_all_status">All Status</string>
    <string name="app_name">MyHotix HouseKeeping</string>
    <string name="all_retry">RETRY</string>
    <string name="all_room">Room</string>
    <string name="all_ok">OK</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_refresh">Refresh</string>
    <string name="all_download">Download</string>
    <string name="all_update">Update</string>
    <string name="all_yes">Yes</string>
    <string name="all_settings">Settings</string>
    <string name="all_downloading">Downloading...</string>
    <string name="all_loading">Loading...</string>
    <string name="all_please_wait">Please wait...</string>
    <string name="all_off">OFF</string>
    <string name="all_on">ON</string>
    <string name="all_valid">VALID</string>
    <string name="all_invalid">INVALID</string>
    <string name="all_save">Save</string>
    <string name="all_select_technician">Select a Technician</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_sync">Sync</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_histo">Histo</string>
    <string name="menu_item_close">Close</string>
    <string name="menu_item_send">Send</string>
    <string name="menu_item_chart">Chart</string>
    <string name="splash_screen_footer">www.MyHotixHouseKeeping.com</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="text_login_button">Login</string>
    <string name="text_vertion">"Version "</string>
    <string name="text_settings">Settings</string>
    <string name="text_serveur_config">Server Settings</string>
    <string name="text_SSL">SSL</string>
    <string name="hint_public_ip">Public IP</string>
    <string name="hint_local_ip">Local IP</string>
    <string name="hint_api_public_url">API Public URL</string>
    <string name="hint_api_local_url">API Local URL</string>
    <string name="text_hotel_code">Hotel Code</string>
    <string name="hint_code">Code</string>
    <string name="text_picture">Picture</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="text_auto_update">Auto Update Settings</string>
    <string name="text_default_url">Default</string>
    <string name="text_toolbar_dashbord">Dashbord</string>
    <string name="text_room_rack">Room Rack</string>
    <string name="text_maintenance_orders">"Maintenance "</string>
    <string name="text_forecast">Forecast</string>
    <string name="text_check_in">Expected Check In</string>
    <string name="text_lost_and_found">Lost and Found</string>
    <string name="text_maintenance_team">Housekeepers</string>
    <string name="text_residents">Residents</string>
    <string name="text_user_settings">User Settings</string>
    <string name="text_configuration">Configuration</string>
    <string name="text_see_housekeepers">See Housekeepers</string>
    <string name="text_declare_maintenance_orders">Declare Maintenance Orders</string>
    <string name="text_close_maintenance_orders">Close Maintenance Orders</string>
    <string name="text_declare_object_found">Declare Object found</string>
    <string name="text_close_object_found">Close Object found</string>
    <string name="text_view_room_status">View Room Status</string>
    <string name="text_change_room_state">Change Room Status</string>
    <string name="text_change_location_state">Change Location State</string>
    <string name="text_view_guests">View Guests</string>
    <string name="text_maintenance">Maintenance</string>
    <string name="text_state_outstanding">Outstanding</string>
    <string name="text_state_fenced">Fenced</string>
    <string name="text_from_date">From :</string>
    <string name="text_to_date">"To : "</string>
    <string name="text_order_row_location">"Location : "</string>
    <string name="text_order_urgent">URGENT</string>
    <string name="text_successfully_closed">Successfully Closed</string>
    <string name="text_successfully_updated">Successfully Updated</string>
    <string name="text_order_details">Order Details</string>
    <string name="text_order_details_close_btn">Close</string>
    <string name="text_show_order_location">Location</string>
    <string name="text_show_order_type">Type</string>
    <string name="text_show_order_treatment_time">Treatment Time</string>
    <string name="text_show_order_date_time">Date and Time</string>
    <string name="text_show_order_declared_by_time">Declared By</string>
    <string name="text_show_order_repaired_by">Repaired By</string>
    <string name="text_show_order_description">Description</string>
    <string name="text_new_order_location">Location</string>
    <string name="hint_new_order_location">Location</string>
    <string name="text_new_order_service_type">Service Type</string>
    <string name="text_new_order_priority_and_time">Priority And Time</string>
    <string name="text_new_order_priority">URGENT</string>
    <string name="hint_new_order_time">Treatment Time</string>
    <string name="text_new_order_declared_by">Declared By</string>
    <string name="hint_new_order_first_name">First Name</string>
    <string name="hint_new_order_last_name">Last Name</string>
    <string name="text_new_order_description">Description</string>
    <string name="hint_new_order_description">Description</string>
    <string name="text_new_order">New Order</string>
    <string name="text_select_type">Select a Type</string>
    <string name="text_new_order_hours">Hour(s)</string>
    <string name="text_successfully_added">Successfully added</string>
    <string name="text_guest_arrivals">Expected Arrivals</string>
    <string name="text_scheduled_arrivals">" Scheduled Arrivals"</string>
    <string name="text_total_scheduled_arrival">Total scheduled arrival</string>
    <string name="text_rooms">Rooms</string>
    <string name="text_found_obj_details">Found Object Details</string>
    <string name="text_lost_and_found_details">Lost And Found Details</string>
    <string name="text_show_lost_and_found_found_by">Found by</string>
    <string name="text_show_lost_and_found_belong_to">Returned to</string>
    <string name="text_show_lost_and_found_comment">Comment</string>
    <string name="text_new_lost_object">New Lost Object</string>
    <string name="text_housekeepers_list">Housekeepers</string>
    <string name="text_unassigned_rooms">Unassigned Rooms</string>
    <string name="text_room_assign_unassigned">Unassigned Rooms</string>
    <string name="text_room_assign_assigned">Rooms Assigned To </string>
    <string name="text_room_assign_remove_all">Remove All</string>
    <string name="text_room_assign_add_all">Add All</string>
    <string name="text_rooms_assignment">Rooms Assignment</string>
    <string name="text_da">(ED)</string>
    <string name="text_du">(DU)</string>
    <string name="text_mouchard">Informer</string>
    <string name="text_arrivals">Arrivals</string>
    <string name="text_departures">Departures</string>
    <string name="text_recouche">Stay-Over</string>
    <string name="text_taux">Rate Occupancy per room</string>
    <string name="text_reste">Rest</string>
    <string name="text_search_filter">Search Filter</string>
    <string name="text_first">First Service</string>
    <string name="text_last">Last Service</string>
    <string name="text_occupation_rate">Occupation Rate</string>
    <string name="text_date">Date</string>
    <string name="text_capacity">Capacity</string>
    <string name="text_total">Total</string>
    <string name="text_room">Room</string>
    <string name="text_pax">Pax</string>
    <string name="text_bed">Bed</string>
    <string name="message_settings_updated">Settings successfully Updated</string>
    <string name="message_successfully_updated">User Permission Successfully Updated</string>
    <string name="message_room_successfully_updated">Room Successfully Updated</string>
    <string name="message_no_maintenance_orders_to_show">No Maintenance Orders To Show!  Good Job.</string>
    <string name="message_no_maintenance_rooms_to_show">No Rooms To Show!</string>
    <string name="message_no_lost_object_to_show">No objects lost and found to show!</string>
    <string name="message_no_scheduled_arrivals_to_show">No Scheduled Arrivals To Show!</string>
    <string name="message_no_activity_to_show">No Activity To Show!</string>
    <string name="message_no_data_to_show">No Data To Show!</string>
    <string name="message_no_housekeepers_to_show">No HouseKeepers To Show!</string>
    <string name="error_message_login_is_empty">Enter your Login!</string>
    <string name="error_message_password_empty">Enter Your Password!</string>
    <string name="error_message_field_required">This field is required!</string>
    <string name="error_message_login">Something went wrong. please verify your login or password!</string>
    <string name="error_message_something_wrong">Something went wrong!</string>
    <string name="error_message_check_settings">Something went wrong. Check your Settings!</string>
    <string name="error_message_server_down">Server is down please try after some time</string>
    <string name="error_message_server_unreachable">The server is unreachable!</string>
    <string name="error_message_no_internet">No Internet Connection!</string>
    <string name="error_message_unreachable_server">The server is unreachable!</string>
    <string name="error_message_user_not_authorised">User Not Authorised To Login!</string>
    <string name="error_message_inactive_account">Your Aaccount is not Currently Active!</string>
    <string name="error_message_expired_pass">Your Password Expired!</string>
    <string name="error_message_wrong_pass">Wrong Password!</string>
    <string name="error_message_unknow_user">This User does not Exist!</string>
    <string name="error_message_not_authorized">You are not authorized</string>
    <string name="error_message_invalid_date">Invalid date range!</string>
    <string name="error_message_select_technician">You need to select a technician</string>
    <string name="error_message_hotel_not_active">Something went wrong.\nContact the administrator!</string>
    <string name="error_message_app_not_active">You don\'t have permission to use this application!</string>
    <string name="error_message_select_type">You need to select a type</string>
    <string name="error_message_state_change">Unauthorized state change!</string>
    <string name="dialog_update_title">Version Update</string>
    <string name="dialog_update_text">Your application is outdate.\nClic UPDATE to download and install the last version</string>
    <string name="dialog_update_btn_text">UPDATE</string>
    <string name="dialog_permission_title">Need Permissions</string>
    <string name="dialog_permission_text">This app needs permission to perform correctly. You can grant them in app Settings.</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_legend_vac_clean">Vacant Clean</string>
    <string name="dialog_legend_vac_dirty">Vacant Dirty</string>
    <string name="dialog_legend_occ_clean">Occupied Clean</string>
    <string name="dialog_legend_occ_dirty">Occupied Dirty</string>
    <string name="dialog_legend_out_of_order">Out of Service</string>
    <string name="dialog_room_rack_options_title">"Room "</string>
    <string name="dialog_room_check_state_tv_title">TV</string>
    <string name="dialog_room_check_state_mini_bar_title">Mini-Bar</string>
    <string name="dialog_room_check_state_towels_title">Towels</string>
</resources>