<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_permission_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Label -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_dialog_permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_permission_text"
        android:textColor="@color/light_bg_dark_secondary_text"
        android:textSize="16sp" />

    <!-- Buttons -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:alpha=".5"
            android:background="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_dialog_permission_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/all_ok"
            android:textColor="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_dialog_permission_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_toStartOf="@+id/btn_dialog_permission_ok"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/all_settings"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</LinearLayout>
