<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_room_check_state_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_room_rack_options_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- TV VALID/INVALID -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <!-- Title -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_room_check_state_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/dialog_room_check_state_tv_title"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_dialog_room_check_state_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/all_valid"
            android:textColor="@color/colorSecondary" />

    </RelativeLayout>

    <!-- Mini Bar VALID/INVALID -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <!-- Title -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_room_check_state_mini_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/dialog_room_check_state_mini_bar_title"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_dialog_room_check_state_mini_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/all_valid"
            android:textColor="@color/colorSecondary" />

    </RelativeLayout>

    <!-- TowelsVALID/INVALID -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <!-- Title -->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_room_check_state_towels_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/dialog_room_check_state_towels_title"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_dialog_room_check_state_towels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/all_valid"
            android:textColor="@color/colorSecondary" />

    </RelativeLayout>

    <!-- Buttons -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:alpha=".5"
            android:background="@color/colorAccent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_dialog_room_check_state_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/all_save"
            android:textColor="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_dialog_room_check_state_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_toStartOf="@id/btn_dialog_room_check_state_save"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/all_cancel"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</LinearLayout>
